add heroes mortality

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "vendor/reset";
+@import "vendor/stylesheet";
 @import "modules/variables";
 @import "vendor/dragon";
 @import "partials/nav";   
-@import "partials/heroes";                                
+@import "partials/heroes";                                         
