--- a/scss/partials/_heroes.scss
+++ b/scss/partials/_heroes.scss
@@ -13,11 +13,11 @@
 
 // Wybór bohatera - checkbox
 
-#heroes input[type=radio] {
+#tab_3 input[type=radio] {
     display:none;
 }
  
-#heroes input[type=radio] + label {
+#tab_3 input[type=radio] + label {
     background-color: white;
     height: 250px;
     width: 150px;
@@ -25,6 +25,6 @@
     padding: 0 0 0 0px;
 }
 
-#heroes input[type=radio]:checked + label {
+#tab_3 input[type=radio]:checked + label {
     background-color: rgba(255,250,102,0.5);
 }
