--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,5 +2,7 @@
 @import "vendor/stylesheet";
 @import "modules/variables";
 @import "vendor/dragon";
-@import "partials/nav";   
-@import "partials/heroes";                                           
+@import "partials/nav"; 
+@import "partials/tabs"; 
+@import "partials/heroes"; 
+@import "partials/squire";                        
