--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -5,3 +5,60 @@
     display: -webkit-flex; 
     display: flex;
 }
+
+$colorMenu: #694100;
+$text: darken($colorMenu, 10%);
+$color1: #946211;
+$color2: #D29F4C;
+$color3: #F9CB82;
+$color4: #B5802A;
+
+.mainWidth {
+    width: 1200px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 100%;
+    @extend %flexibility;
+    position: relative;
+}
+
+$mobile: 630px; // 450px
+$smartphone: 740px;
+$tablet: 1200px;
+
+
+
+::-webkit-scrollbar {
+  width: 16px;
+  height: 16px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #a57729;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #74531d;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #6b4e1b;
+}
+::-webkit-scrollbar-track {
+
+  border: 0px none #ffffff;
+  border-radius: 52px;
+}
+::-webkit-scrollbar-track:hover {
+
+}
+::-webkit-scrollbar-track:active {
+
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
