--- a/scss/partials/_heroes.scss
+++ b/scss/partials/_heroes.scss
@@ -1,14 +1,31 @@
 #barbarian, #knight, #rogue {
-    width: 150px;
-    height: 250px;
+    width: 250px;
+    height: 350px;
     margin: 30px;
     display: inline-block;
-    border: 1px solid black;
+    position: absolute;
     
     &:hover {
         background-color: rgba(255,250,102,0.5);
     }
 }
+
+#rogue {
+    top: 200px;
+    right: 136px;
+}
+
+#knight {
+    top: 200px;
+    left: 301px;
+}
+
+#barbarian {
+    top: 200px;
+    left: 97px
+}
+
+
 
 
 // Wybór bohatera - checkbox
@@ -18,12 +35,28 @@
 }
  
 #tab_3 input[type=radio] + label {
-    background-color: white;
-    height: 250px;
-    width: 150px;
     display:inline-block;
     padding: 0 0 0 0px;
+    background-position: center center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 250px;
+    cursor: pointer;
 }
+
+#barbarian input[type=radio] + label {
+    background-image: url("../images/barb.png");
+}
+
+#knight input[type=radio] + label {
+    background-image: url("../images/knight.png");
+}
+
+#rogue input[type=radio] + label {
+    background-image: url("../images/pnp_rogue.png");
+}
+
 
 #tab_3 input[type=radio]:checked + label {
     background-color: rgba(255,250,102,0.5);
