--- a/scss/partials/_tabs.scss
+++ b/scss/partials/_tabs.scss
@@ -20,9 +20,9 @@
         }
         
         .paper {
-            height: 600px;
+            height: 40vw;
             width: 800px;
-            background-color: rgba(210, 159, 76, 0.5);
+            background-color: rgba(210, 159, 76, 0.85);
             color: $text;
             display: -webkit-box; 
             display: -moz-box;
