--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "vendor/reset";
 @import "vendor/stylesheet";
+@import "vendor/nanoscroller";
 @import "modules/variables";
 @import "vendor/dragon";
 @import "partials/background";
@@ -8,4 +9,4 @@
 @import "partials/heroes"; 
 @import "partials/squire";  
 @import "partials/smith";                                                       
-                                                      
+                                                                  
