--- a/scss/partials/_background.scss
+++ b/scss/partials/_background.scss
@@ -2,17 +2,18 @@
 //    
 //}
 //
-//@media only screen and (min-width: $mobile + 1px) and (max-width: $tablet) {
-//
-//}
 
-@media only screen and (min-width: $tablet + 1px) and (orientation: landscape) {
+
+
+
+@media only screen and (min-width: $mobile + 1px) and (orientation: landscape) {
 
     body {
         position: relative;
         overflow: hidden;
         width: 100%;
         height: 100%;
+        background: url("../images/background/mapa.JPG") 0 0 no-repeat;
     }    
     
 //    #bodyBckgrnd {
@@ -23,8 +24,4 @@
 //        margin: auto;
 //    }
 //    
-    
-    body {
-        background: url("../images/background/mapa.JPG") 0 0 no-repeat;
-    }
 }
