--- a/scss/partials/_tabs.scss
+++ b/scss/partials/_tabs.scss
@@ -2,9 +2,9 @@
 //    
 //}
 //
-//@media only screen and (min-width: $mobile + 1px) and (max-width: $tablet) {
-//
-//}
+@media only screen and (min-width: $mobile + 1px) and (max-width: $tablet) {
+
+}
 
 @media only screen and (min-width: $tablet + 1px) and (orientation: landscape) {
     
@@ -30,8 +30,8 @@
             display: -webkit-flex; 
             display: flex;
             border: 1px solid $colorMenu;
-            border-radius: 9px;
-            padding: 10px;
+            border-radius: 5px;
+            padding: 15px;
             flex-direction: column;
             justify-content: flex-start;
             align-items: baseline;
@@ -56,6 +56,7 @@
             font-size: 26px;
             line-height: 50px;
             text-align: justify;
+            margin-right: 10px;
         }
     }
     
