--- a/scss/partials/_background.scss
+++ b/scss/partials/_background.scss
@@ -4,9 +4,19 @@
 //
 
 
+@media only screen and (min-width: $mobile + 1px) and (max-width: $tablet) {
 
+    body {
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        background: url("../images/background/mapa.JPG") 0 0 no-repeat;
+        background-size: 225%;
+    } 
+}
 
-@media only screen and (min-width: $mobile + 1px) and (orientation: landscape) {
+@media only screen and (min-width: $tablet + 1px) and (orientation: landscape) {
 
     body {
         position: relative;
