--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,11 +1,11 @@
 @import "vendor/reset";
 @import "vendor/stylesheet";
-@import "vendor/nanoscroller";
 @import "modules/variables";
+@import "vendor/perfect-scrollbar";
 @import "vendor/dragon";
 @import "partials/background";
 @import "partials/nav"; 
 @import "partials/tabs"; 
-@import "partials/heroes"; 
+@import "partials/heroes";  
 @import "partials/squire";  
-@import "partials/smith";                           
+@import "partials/smith";                                  
