--- a/scss/partials/_heroes.scss
+++ b/scss/partials/_heroes.scss
@@ -17,12 +17,13 @@
         justify-content: center;
         
         .shadow {
-            width: 50vw;
-            height: 18vh;
-            position: absolute;
-            left: 0;
-            top: 0;
-            background-color: rgba(0,0,0,0.5);
+            display: none;
+//            width: 50vw;
+//            height: 18vh;
+//            position: absolute;
+//            left: 0;
+//            top: 0;
+//            background-color: rgba(0,0,0,0.5);
         }
         
         .face {
