--- a/scss/partials/_tabs.scss
+++ b/scss/partials/_tabs.scss
@@ -1,13 +1,13 @@
-.content {
-    display: -webkit-box; 
-    display: -moz-box;
-    display: -ms-flexbox;  
-    display: -webkit-flex; 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: baseline;
-}
+//.content {
+//    display: -webkit-box; 
+//    display: -moz-box;
+//    display: -ms-flexbox;  
+//    display: -webkit-flex; 
+//    display: flex;
+//    flex-direction: column;
+//    justify-content: flex-start;
+//    align-items: baseline;
+//}
 
 //@media only screen and (max-width: $mobile) {
 //    
@@ -30,7 +30,6 @@
             border: 1px solid $colorMenu;
             border-radius: 5px;
             padding: 1vw;
-           
             overflow: hidden;
             margin-top: 1vw;
             font-family: 'Almendra-Regular', sans-serif; 
@@ -40,7 +39,13 @@
     
     #tab_5 {
         .paper {
-             height: 70vh;
+            height: 80vh;
+            padding: 0;
+            display: -webkit-box; 
+            display: -moz-box;
+            display: -ms-flexbox;  
+            display: -webkit-flex; 
+            display: flex;
         }
     }
     
@@ -71,14 +76,7 @@
             font-size: 36px;
         }
     }
-    
-    #tab_5 {
-        .paper {
-            justify-content: center;
-            align-items: center;
-            font-size: 26px;
-        }
-    }
+
     
     // Ognisko
     
@@ -155,7 +153,10 @@
     
     #tab_5 {
         .paper {
-             height: 600px;
+            height: 600px;
+            justify-content: center;
+            align-items: center;
+            font-size: 36px;
         }
     }
     
@@ -187,13 +188,6 @@
         }
     }
     
-    #tab_5 {
-        .paper {
-            justify-content: center;
-            align-items: center;
-            font-size: 36px;
-        }
-    }
     
 // Ognisko
     
