--- a/scss/partials/_smith.scss
+++ b/scss/partials/_smith.scss
@@ -4,31 +4,24 @@
 //
 @media only screen and (min-width: $mobile + 1px) and (max-width: $tablet) {
     #tab_5 .paper {
-        overflow: hidden;
         flex-direction: row;
         justify-content: space-around;
         align-items: flex-start;
-    }
-    
-    #list1, #list2 {
-        width: 38vw;
-        height: 67vh;
-        margin: 0 auto;
-        border: 1px solid $colorMenu;
-        background-color: $color2;
-        display: -webkit-box; 
-        display: -moz-box;
-        display: -ms-flexbox;  
-        display: -webkit-flex; 
-        display: inline-flex;
-        flex-wrap: wrap;
-        text-align: center;
-        overflow: hidden;
+        
+        #cont1, #cont2 {
+            position: relative;
+            overflow:auto;
+            width: 38vw;
+            height: 67vh;
+            margin: 0 auto;
+            border: 1px solid $colorMenu;
+            background-color: $color2;
+        }
     }
     
     .slot {
-        width: 95%;
-        height: 25vh;
+        width: 90%;
+        height: 35vh;
         position: relative;
         box-sizing: border-box;
         border: 1px solid $color1;
@@ -41,7 +34,7 @@
             right: 0;
             margin: 0 auto;
             background-color: rgba(0,0,0,0.25);
-            cursor: pointer;
+            text-align: center;
         }
         
         img {
@@ -68,8 +61,9 @@
     .description {
         display: inline-block;
         color: black;
-        font-size: 3vh;
-        margin-top: 0.5vh;
+        font-size: 4vh;
+        text-align: center;
+        margin: 0.5vh;
         
         p {
             font-weight: bold;
@@ -79,14 +73,13 @@
     
     #playerPocket {
         font-family: 'Almendra-Regular', sans-serif;
-        font-size: 30px;
+        font-size: 5vh;
         color: $colorMenu;
         position: absolute;
-        bottom: 12px;
-        left: 25px;
+        bottom: 1vw;
+        left: 2vw;
         
         #money {
-            font-size: 40px;
             font-weight: bold;
             color: black;
         }   
@@ -97,13 +90,14 @@
     
     #tab_5 .paper {
         overflow: visible;
+        
     }
     
     #list1, #list2 {
         position: absolute;
         left: 0;
         right: 0;
-        width: 600px;
+        width: 620px;
         height: 240px;
         margin: 0 auto;
         border: 1px solid $colorMenu;
